--- a/AHWForm/AHWForm/Site.Master
+++ b/AHWForm/AHWForm/Site.Master
@@ -46,13 +46,13 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" runat="server" href="~/">Application name</a>
+                    <a class="navbar-brand" runat="server" href="~/"><asp:Label runat="server" Text="<%$ Resources:Resource, ApplicationName %>" ID="AppNameLabel"/></a>
+                    <a class="navbar-brand" runat="server" href="~/CommentSite"><asp:Label runat="server" Text="<%$ Resources:Resource, CommentSectionName %>" ID="CommentSectionLabel"/></a>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li><a runat="server" href="~/">Home</a></li>
-                        <li><a runat="server" href="~/About">About</a></li>
-                        <li><a runat="server" href="~/Contact">Contact</a></li>
+                        <%--<li><a runat="server" href="~/">Home</a></li>--%>
+                        <li><a runat="server" href="~/CreateAuction"><asp:Label runat="server" Text="<%$ Resources:Resource, CreateAuction %>" ID="CreateAuctionLabel"></asp:Label></a></li>
                     </ul>
                     <asp:LoginView runat="server" ViewStateMode="Disabled">
                         <AnonymousTemplate>
